# formalities

./: .gitignore  ABSTRACT.md  ARCHITECTURE.md  BRAINSTORM.html  BRAINSTORM.md  CHANGELOG.md  CLAUDE.md  DESIGNPRINCIPLE  LOGO.psd  ROADMAP.md  concatprompt.txt  md2html.py  pyproject.toml  pytest.ini  requirements.txt  tree.txt
CHECKLISTS/: FINAL.md
CHECKLISTS/EMBEDDED/: PHASE1.md  PHASE2.md  PHASE3.md
CHECKLISTS/UTILITY/: PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md
TODO/: FALL.md  Feb20.md  Feb21.md  Feb25.md  REFALL.md
TODO/FALL/: Mar2.md
TODO/VALIUM/: NumericalStatements.md
hashes/: abstract.txt  abstract.txt.ots  brainstorm.txt  brainstorm.txt.ots
playground/: __init__.py  correlatewetwithrain.py  slipperywhenwet.py
sandbox/: __init__.py  llama_char_count.py  mistral_nemo_char_count.py
sandbox/fall/: relationship_detection.py  socratesFALSE.fall  socratesTRUE.fall
sandbox/mistralnemo/: __init__.py  managed_char_count.py
sandbox/tests/: __init__.py
sandbox/tests/fall/: __init__.py  executor_enhancement_test.py  infer_val_test.py  language_processing.py  nlp_sim_test.py  (+4 more)
src/formalities/: __init__.py  tree.txt
src/formalities.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/core/: __init__.py
tests/fall/: __init__.py  formalities_integration.py  test_lexer.py
tests/frameworks/: __init__.py  test_framework_selector.py
tests/utils/: __init__.py  test_formatting_formatcode.py  test_tool_handlers.py  test_type_handler.py
tests/validation/: __init__.py  test_context.py
(+84 files in other folders)
